# coreutils-rs

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/inf_common/: Cargo.toml
src/inf_common/src/: lib.rs  macros.rs
src/inf_core/echo/: Cargo.toml
src/inf_core/echo/src/: echo.rs  main.rs
src/inf_procs/: Cargo.toml
src/inf_procs/src/: lib.rs
