[package]
name = "coreutils-rs"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["feat_common"]

feat_common = [
  "echo"
]

[workspace.dependencies]
chrono = { version = "0.4.31", default-features = false, features = [
  "std",
  "alloc",
  "clock",
]}
clap = { version = "4.4.6", features = ["wrap_help", "cargo"] }
phf = "0.11.2"
phf_codegen = "0.11.2"

inf_common = { version = "0.1.0", package = "inf_common", path = "src/inf_common" }
inf_procs = { version = "0.1.0", package = "inf_procs", path = "src/inf_procs" }

[build-dependencies]
phf_codegen = { workspace = true }

[dependencies]
clap = { workspace = true }
phf = { workspace = true }
inf_common = { workspace = true }

echo = { optional = true, version = "0.0.1", package = "inf_echo", path="src/inf_core/echo" }
