[package]
name = "inf_procs"
version = "0.1.0"
edition = "2021"
license = "MIT"
desription = "inf_procs ~ 'coreutils-rs` proc-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "1.0.109"
