[package]
name = "inf_echo"
version = "0.0.1"
edition = "2021"
authors = ["fractalis"]
description = "echo ~ A simple echo utility"

homepage = "https://github.com/fractalis/coreutils-rs"
repository = "https://github.com/fractalis/coreutils-rs/tree/main/src/core/echo"
keywords = ["coreutils", "cli", "utility"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/echo.rs"

[dependencies]
clap = { workspace = true }
inf_common = { workspace = true }

[[bin]]
name = "echo"
path = "src/main.rs"
